changing list to linkedlist just to be sure